# marketbridge

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  ENHANCED_LOGGING_SUMMARY.md  PLAYWRIGHT.md  README.md  browser-bunny  mypy.ini  pyproject.toml  run_server.py  test_logging.html
docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: BROWSER_BUNNY_INTEGRATION.md  BROWSER_LOGGING.md  BROWSER_LOGGING_QUICK_REFERENCE.md  BROWSER_SESSIONS.md  README.md
examples/: README.md  browser_session_example.py  check_market_data.py  cleanup_sessions.py  complete_workflow_test.py  create_marketbridge_session.py  marketbridge_parser.py  persistent_browser.py  quick_ib_check.py  quick_probe.py  subscribe.py  subscribe_futures.py  test_browser_logging.py  unsubscribe.py
playwright/: __init__.py  browser_manager.py  session_manager.py
playwright/examples/: __init__.py  basic_navigation.py  marketbridge_interaction.py
scripts/: browser_session_daemon.py  check_all_files.py  manage_server.py  playwright_session.py  setup_dev.py  start_server.sh
src/marketbridge/: browser_client.py  browser_session_server.py  combined_server.py  ib_websocket_bridge.py  session_registry.py  web_server.py
src/marketbridge_playwright/: browser_manager.py  session_manager.py
src/marketbridge_playwright/examples/: basic_navigation.py  marketbridge_interaction.py
tests/: test_core.py  test_pytest.py
tests/e2e/: test_end_to_end.py
tests/fixtures/: mock_data.py  test_utils.py
tests/integration/: test_message_flow.py  test_websocket_integration.py
tests/unit/: test_contract_factory.py  test_ib_websocket_bridge.py  test_ib_wrapper.py
web/: README.md  setup_frontend.sh
web/public/: index.html
web/public/assets/css/: components.css  main.css
web/public/src/components/: market-data-display.js  order-manager.js  subscription-manager.js
web/public/src/js/: app.js
web/public/src/services/: browser-logger.js  websocket-client.js
web/public/src/utils/: logger.js
web/src/components/: market-data-display.js
web/src/js/: app.js
